# llvm-project

llvm/lib/CodeGen/: InlineSpiller.cpp  RegAllocGreedy.cpp
llvm/test/CodeGen/AArch64/: clear-dead-implicit-def-impdef.mir  implicit-def-with-impdef-greedy-assert.mir  llvm.frexp.ll
llvm/test/CodeGen/AArch64/Atomics/: aarch64-atomic-load-rcpc_immo.ll
llvm/test/CodeGen/AMDGPU/: amdgpu-simplify-libcall-pow-codegen.ll  gfx-callable-argument-types.ll  greedy-wwm-copy-prologue-assert.mir  hazard-pass-ordering.mir  i128-add-carry-chain.ll  insert-handle-flat-vmem-ds.mir  insert-skip-from-vcc.mir  insert-skips-gfx10.mir  insert-skips-gfx12.mir  insert-skips-gfx1250.mir  insert-skips-gws.mir  insert-skips-ignored-insts.mir  llc-pipeline.ll  mad-mix.ll  regalloc-hoist-spill-live-range-interference.mir  remat-csr.mir  remove-not-short-exec-branch-on-unconditional-jump.mir  remove-short-exec-branches-gpr-idx-mode.mir  remove-short-exec-branches-special-instructions.mir  set-gpr-idx-peephole.mir  si-pre-emit-peephole-fmac-f16.mir  si-pre-emit-peephole-fmac.mir  si-pre-emit-peephole-preserve-loop-info.mir  skip-branch-taildup-ret.mir  splitkit-copy-bundle.mir  unstructured-cfg-def-use-issue.ll
llvm/test/CodeGen/RISCV/GlobalISel/: atomicrmw-max-min-umax-umin.ll
mlir/include/mlir/Dialect/LLVMIR/: LLVMIntrinsicOps.td  LLVMTypes.td
mlir/include/mlir/Dialect/Linalg/Transforms/: Transforms.h
mlir/lib/Dialect/LLVMIR/IR/: LLVMDialect.cpp  LLVMTypes.cpp
mlir/lib/Dialect/Linalg/Transforms/: DropUnitDims.cpp
mlir/test/Dialect/Linalg/: test-drop-unit-dims.mlir
mlir/test/lib/Dialect/Linalg/: TestLinalgDropUnitDims.cpp
openmp/libomptarget/cmake/Modules/: LibomptargetGetDependencies.cmake
openmp/libomptarget/plugins/: CMakeLists.txt
openmp/libomptarget/plugins/tapasco/: CMakeLists.txt
openmp/libomptarget/plugins/tapasco/src/: rtl.cpp
